--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -99,23 +99,23 @@
 
     --heading-border-size: 4px;
 
-    --alert-note-color: #4da3ff;
+    --alert-note-color: #075985;
     --alert-note-background: rgba(77, 163, 255, 0.08);
-    --alert-tip-color: #3fb950;
+    --alert-tip-color: #166534;
     --alert-tip-background: rgba(63, 185, 80, 0.08);
-    --alert-important-color: #8457d9;
+    --alert-important-color: #6b21a8;
     --alert-important-background: rgba(130, 80, 223, 0.08);
-    --alert-warning-color: #d29922;
+    --alert-warning-color: #854d0e;
     --alert-warning-background: rgba(210, 153, 34, 0.1);
-    --alert-caution-color: #f85149;
+    --alert-caution-color: #b91c1c;
     --alert-caution-background: rgba(248, 81, 73, 0.1);
 
     --link-background-color: 189, 195, 199;
     --link-background-opacity: 0.5;
     --link-background-opacity-hover: 0.7;
 
-    --code-background-color: rgba(0, 0, 0, 0.12);
-    --code-text-color: #808080;
+    --code-background-color: rgba(0, 0, 0, 0.08);
+    --code-text-color: #374151;
 
     --table-border-color: #dadada;
     --tr-even-background-color: #efefee;
